--- a/Main.css
+++ b/Main.css
@@ -71,7 +71,7 @@ a.active,a:hover{
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #5c5c5c;
+    background: #4e6d85;
     top: 80px;
     left: -100%;
     text-align: center;
