--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a.active,a:hover{
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #2c3e50;
+    background: #767fa3;
     top: 80px;
     left: -100%;
     text-align: center;
@@ -85,7 +85,7 @@ a.active,a:hover{
   }
   a:hover,a.active{
     background: none;
-    color: #0082e6;
+    color: #767fa3;
   }
   #check:checked ~ ul{
     left: 0;
